Add more validation examples

--- a/emb_model.ipynb
+++ b/emb_model.ipynb
@@ -52,7 +52,7 @@
         "drive.mount('/content/drive')"
       ],
       "id": "qa9mxZGMoEdK",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "drivepath = 'drive/MyDrive/Bild/'"
       ],
       "id": "c5825374-c511-47fe-a2e4-da9bd8431a6d",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +392,7 @@
         "word_vectors.save(drivepath+\"word2vec.wordvectors\")"
       ],
       "id": "9ha2RB9E8uED",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
         "id": "UBFlf0_lYQDk"
       },
       "source": [
-        "Assess model validity"
+        "## Assess model validity and bias"
       ],
       "id": "UBFlf0_lYQDk"
     },
@@ -439,7 +439,7 @@
         "wv = KeyedVectors.load(drivepath+\"word2vec.wordvectors\", mmap='r')"
       ],
       "id": "GXCjolwu9MM6",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,7 +466,7 @@
         "word_vectors.most_similar('flüchtling', topn=10)  # get other similar words"
       ],
       "id": "wjr7esAa9Py7",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,16 +495,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "u33HxMZWeZs6",
-        "outputId": "7d384003-dfda-411a-a989-3c532f4bb6b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7d384003-dfda-411a-a989-3c532f4bb6b6"
       },
       "source": [
         "word_vectors.most_similar('immigration', topn=10)"
       ],
       "id": "u33HxMZWeZs6",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,16 +533,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "tuVq4qIWfKua",
-        "outputId": "1c272bd2-5c42-400e-ec17-84a31c5f4726",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1c272bd2-5c42-400e-ec17-84a31c5f4726"
       },
       "source": [
         "word_vectors.most_similar(positive=[\"frau\",\"könig\"],negative=[\"mann\"])"
       ],
       "id": "tuVq4qIWfKua",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,16 +571,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "z3zWGmo4f3se",
-        "outputId": "d4ca2116-ace2-4e05-af1d-1cd665833aa8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d4ca2116-ace2-4e05-af1d-1cd665833aa8"
       },
       "source": [
         "word_vectors.most_similar(positive=[\"sie\",\"arzt\"],negative=[\"er\"]) # surprisingly unbiased on gender"
       ],
       "id": "z3zWGmo4f3se",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -609,16 +609,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "smDJLjUKfU5p",
-        "outputId": "7a58a0d3-5f38-43fe-ea63-74dbeac2cb56",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7a58a0d3-5f38-43fe-ea63-74dbeac2cb56"
       },
       "source": [
         "word_vectors.most_similar(positive=[\"frau\",\"arzt\"],negative=[\"mann\"]) # surprisingly unbiased on gender"
       ],
       "id": "smDJLjUKfU5p",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,17 +646,93 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wH4d6r1Kffus",
-        "outputId": "8f215434-7140-408e-ebda-8bc246fcfff6",
+        "id": "FxDPocr-g3YY",
+        "outputId": "f3c61614-af4c-4b49-ee92-931d895917f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
+        "word_vectors.most_similar(positive=[\"paris\",\"deutschland\"],negative=[\"frankreich\"])"
+      ],
+      "id": "FxDPocr-g3YY",
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('berlin', 0.6862106323242188),\n",
+              " ('london', 0.5941942930221558),\n",
+              " ('hamburg', 0.5866048336029053),\n",
+              " ('wien', 0.5829630494117737),\n",
+              " ('istanbul', 0.5503863096237183),\n",
+              " ('münchen', 0.5434967279434204),\n",
+              " ('beirut', 0.5392472743988037),\n",
+              " ('bonn', 0.5391743779182434),\n",
+              " ('kopenhagen', 0.5342260003089905),\n",
+              " ('nizza', 0.517402172088623)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v9IFN3_JhHWz",
+        "outputId": "55fd06c5-63e5-4831-f6df-71300bb8d00e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "word_vectors.most_similar(positive=[\"paris\",\"polen\"],negative=[\"frankreich\"])"
+      ],
+      "id": "v9IFN3_JhHWz",
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('warschau', 0.8071402311325073),\n",
+              " ('prag', 0.7456791400909424),\n",
+              " ('budapest', 0.7000434398651123),\n",
+              " ('krakau', 0.6923572421073914),\n",
+              " ('vilnius', 0.6860805749893188),\n",
+              " ('breslau', 0.6763931512832642),\n",
+              " ('bukarest', 0.6759054660797119),\n",
+              " ('riga', 0.6679434776306152),\n",
+              " ('lodz', 0.660430908203125),\n",
+              " ('wien', 0.6420296430587769)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wH4d6r1Kffus",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8f215434-7140-408e-ebda-8bc246fcfff6"
+      },
+      "source": [
         "word_vectors.most_similar(positive=[\"marokkaner\",\"polizist\"],negative=[\"deutscher\"])"
       ],
       "id": "wH4d6r1Kffus",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
