fix loading vectors

--- a/emb_model.ipynb
+++ b/emb_model.ipynb
@@ -432,22 +432,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2b837bb3-d569-4f55-c89b-ef84c54a63db"
+        "outputId": "043258a4-d513-41d9-e1ba-f2d7560401c1"
       },
       "source": [
         "from gensim.models import KeyedVectors\n",
         "wv = KeyedVectors.load(drivepath+\"word2vec.wordvectors\", mmap='r')"
       ],
       "id": "GXCjolwu9MM6",
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-08-10 09:51:40,140 : INFO : loading Word2VecKeyedVectors object from drive/MyDrive/Bild/word2vec.wordvectors\n",
-            "2021-08-10 09:51:40,641 : INFO : loading vectors from drive/MyDrive/Bild/word2vec.wordvectors.vectors.npy with mmap=r\n",
-            "2021-08-10 09:51:40,662 : INFO : setting ignored attribute vectors_norm to None\n",
-            "2021-08-10 09:51:40,663 : INFO : loaded drive/MyDrive/Bild/word2vec.wordvectors\n"
+            "2021-08-10 11:24:47,384 : INFO : loading Word2VecKeyedVectors object from drive/MyDrive/Bild/word2vec.wordvectors\n",
+            "2021-08-10 11:24:47,924 : INFO : loading vectors from drive/MyDrive/Bild/word2vec.wordvectors.vectors.npy with mmap=r\n",
+            "2021-08-10 11:24:47,930 : INFO : setting ignored attribute vectors_norm to None\n",
+            "2021-08-10 11:24:47,932 : INFO : loaded drive/MyDrive/Bild/word2vec.wordvectors\n"
           ],
           "name": "stderr"
         }
@@ -460,14 +460,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "56a7092b-b448-480c-b928-a045234503bc"
+        "outputId": "5091aaea-c0ce-49e6-cad6-61d9920e8932"
       },
       "source": [
-        "word_vectors.most_similar('flüchtling', topn=10)  # get other similar words"
+        "wv.most_similar('flüchtling', topn=10)  # get other similar words"
       ],
       "id": "wjr7esAa9Py7",
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-08-10 11:24:52,014 : INFO : precomputing L2-norms of word weight vectors\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -487,7 +494,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 23
         }
       ]
     },
@@ -498,13 +505,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d384003-dfda-411a-a989-3c532f4bb6b6"
+        "outputId": "099e1d0d-3d4d-415f-c0f0-8c72062614eb"
       },
       "source": [
-        "word_vectors.most_similar('immigration', topn=10)"
+        "wv.most_similar('immigration', topn=10)"
       ],
       "id": "u33HxMZWeZs6",
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +532,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 24
         }
       ]
     },
@@ -536,13 +543,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c272bd2-5c42-400e-ec17-84a31c5f4726"
+        "outputId": "665aa94c-3eca-4791-d11a-0f8321f68142"
       },
       "source": [
-        "word_vectors.most_similar(positive=[\"frau\",\"könig\"],negative=[\"mann\"])"
+        "wv.most_similar(positive=[\"frau\",\"könig\"],negative=[\"mann\"])"
       ],
       "id": "tuVq4qIWfKua",
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,45 +570,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "z3zWGmo4f3se",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d4ca2116-ace2-4e05-af1d-1cd665833aa8"
-      },
-      "source": [
-        "word_vectors.most_similar(positive=[\"sie\",\"arzt\"],negative=[\"er\"]) # surprisingly unbiased on gender"
-      ],
-      "id": "z3zWGmo4f3se",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[('gynäkologen', 0.6619372367858887),\n",
-              " ('frauenarzt', 0.6503668427467346),\n",
-              " ('hausarzt', 0.647055983543396),\n",
-              " ('kinderarzt', 0.6321763396263123),\n",
-              " ('urologen', 0.6317317485809326),\n",
-              " ('ärzte', 0.6316326856613159),\n",
-              " ('orthopäden', 0.629375696182251),\n",
-              " ('mediziner', 0.6273952722549438),\n",
-              " ('therapeuten', 0.6148329973220825),\n",
-              " ('kardiologen', 0.6140260696411133)]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
+          "execution_count": 25
         }
       ]
     },
@@ -612,13 +581,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7a58a0d3-5f38-43fe-ea63-74dbeac2cb56"
+        "outputId": "18a5c91a-4ff0-40fa-8eb1-365efbb96981"
       },
       "source": [
-        "word_vectors.most_similar(positive=[\"frau\",\"arzt\"],negative=[\"mann\"]) # surprisingly unbiased on gender"
+        "wv.most_similar(positive=[\"frau\",\"arzt\"],negative=[\"mann\"]) # surprisingly unbiased on gender"
       ],
       "id": "smDJLjUKfU5p",
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,7 +608,45 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z3zWGmo4f3se",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d2ae120f-5691-4a6f-f33b-37021d96895c"
+      },
+      "source": [
+        "wv.most_similar(positive=[\"sie\",\"arzt\"],negative=[\"er\"]) # surprisingly unbiased on gender"
+      ],
+      "id": "z3zWGmo4f3se",
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('gynäkologen', 0.6619372367858887),\n",
+              " ('frauenarzt', 0.6503668427467346),\n",
+              " ('hausarzt', 0.647055983543396),\n",
+              " ('kinderarzt', 0.6321763396263123),\n",
+              " ('urologen', 0.6317317485809326),\n",
+              " ('ärzte', 0.6316326856613159),\n",
+              " ('orthopäden', 0.629375696182251),\n",
+              " ('mediziner', 0.6273952722549438),\n",
+              " ('therapeuten', 0.6148329973220825),\n",
+              " ('kardiologen', 0.6140260696411133)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
         }
       ]
     },
@@ -647,16 +654,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "FxDPocr-g3YY",
-        "outputId": "f3c61614-af4c-4b49-ee92-931d895917f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f3c61614-af4c-4b49-ee92-931d895917f8"
       },
       "source": [
-        "word_vectors.most_similar(positive=[\"paris\",\"deutschland\"],negative=[\"frankreich\"])"
+        "wv.most_similar(positive=[\"paris\",\"deutschland\"],negative=[\"frankreich\"])"
       ],
       "id": "FxDPocr-g3YY",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,16 +692,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "v9IFN3_JhHWz",
-        "outputId": "55fd06c5-63e5-4831-f6df-71300bb8d00e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "55fd06c5-63e5-4831-f6df-71300bb8d00e"
       },
       "source": [
-        "word_vectors.most_similar(positive=[\"paris\",\"polen\"],negative=[\"frankreich\"])"
+        "wv.most_similar(positive=[\"paris\",\"polen\"],negative=[\"frankreich\"])"
       ],
       "id": "v9IFN3_JhHWz",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -729,7 +736,7 @@
         "outputId": "8f215434-7140-408e-ebda-8bc246fcfff6"
       },
       "source": [
-        "word_vectors.most_similar(positive=[\"marokkaner\",\"polizist\"],negative=[\"deutscher\"])"
+        "wv.most_similar(positive=[\"marokkaner\",\"polizist\"],negative=[\"deutscher\"])"
       ],
       "id": "wH4d6r1Kffus",
       "execution_count": null,
